files modified to ensur content is legibly and correctly displayed on laptop/desktop

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -53,7 +53,7 @@ h2 {
 
 .container p {
     font-size: 11px;
-    color: #797979;
+    color: #ffffff;
 }
 
 .navbar {
@@ -239,12 +239,10 @@ textarea {
 
     h1 {
         font-size: 30px;
-        color: #797979;
     }
 
     h2 {
         font-size: 20px;
-        color: #CA6D18;
     }
 
     .position {
@@ -338,7 +336,157 @@ textarea {
 
 /* Large devices (Laptops/Desktops, 1024px and up) */
 @media only screen and (min-width: 1024px) {
-    body {
-        background-color: yellow;
+    .header {
+        height: 300px;
+    }
+
+    .profile-picture {
+        top: -108px;
+        left: 30px;
+        z-index: 1;
+    }
+
+    #image {
+        border: 5px solid #CA6D18;
+    }
+
+    .container {
+        left: 270px;
+    }
+
+    h1 {
+        margin-top: 10px;
+        font-size: 50px;
+    }
+
+    .position {
+        font-size: 130%;
+    }
+
+    .header p {
+        font-size: 18px;
+        margin-top: 20px;
+        color: #fff;
+    }
+
+    .navbar {
+        width: 230px;
+        height: 1927px;
+        position: absolute;
+        left: 20px;
+    }
+
+    .empty-space {
+        height: 300px;
+    }
+
+    .menu {
+        position: sticky;
+        top: 0px;
+    }
+
+    .menu h2 {
+        padding: 20px 0;
+    }
+
+    .internal-links ul{
+        padding: 0px 0px 0px 20px;
+        flex-direction: column;
+    }
+
+    .menu a {font-size: 18px; font-weight: 500;}
+
+
+    li {
+        padding-left: 5px;
+    }
+
+    h2{
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 20px;
+        margin-top: 20px;
+    }
+
+    main {
+        margin-left: 250px;
+    }
+
+    p{
+        font-size: 18px;
+    }
+
+    .education {
+        margin-right: 18px;
+        padding: 20px 20px 0;
+    }
+
+    .workExperience-skillsTools li {
+        font-size: 18px;
+    }
+
+    .experience {
+        margin-bottom: 20px;
+    }
+    .workExperience-skillsTools {
+        padding: 10px 20px 0 20px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .experience ul,
+    .skills ul {
+        padding-left: 20px;
+        font-size: 11px;
+    }
+
+    .footer {
+        margin-bottom: 20px;
+    }
+
+    .form-box {
+        margin: 20px 40px 20px 40px;
+        z-index: 1;
+        position: relative;
+        width: 182px;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 5px solid #CA6D18;
+        border-radius: 20px;
+    }
+
+
+    .inputbox label {
+        position: absolute;
+        left: 20px;
+        top: -90%;
+        font-size: 1em;
+    }
+
+
+    textarea .inputbox {
+        font-size: 1em;
+        width: 155px;
+        height: auto;
+    }
+
+    .footer-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .placeholder {
+        height: 328px;
+        width: 78%;
+        margin: 0 30px 0 10px;
+    }
+    
+    .contactDetails {
+        margin-bottom: 10px;
     }
 }
